NetBSD Problem Report #43623

From taca@back-street.net  Thu Jul 15 13:59:58 2010
Return-Path: <taca@back-street.net>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 1EADD63BADB
	for <gnats-bugs@gnats.NetBSD.org>; Thu, 15 Jul 2010 13:59:58 +0000 (UTC)
Message-Id: <20100715024801.87AB74EEB8@edge.back-street.net>
Date: Thu, 15 Jul 2010 11:48:01 +0900 (JST)
From: taca@back-street.net
Reply-To: taca@back-street.net
To: gnats-bugs@gnats.NetBSD.org
Subject: /etc/crontab dosen't processed any more
X-Send-Pr-Version: 3.95

>Number:         43623
>Category:       bin
>Synopsis:       /etc/crontab dosen't processed any more
>Confidential:   no
>Severity:       serious
>Priority:       high
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Thu Jul 15 14:00:00 +0000 2010
>Closed-Date:    Sun Jul 18 01:06:30 +0000 2010
>Last-Modified:  Sun Jul 18 01:06:30 +0000 2010
>Originator:     Takahiro Kambe
>Release:        NetBSD 5.99.36
>Organization:
Takahiro Kambe
>Environment:


System: NetBSD edge.back-street.net 5.99.36 NetBSD 5.99.36 (VMWARE-F3-MONO) #19: Wed Jul 14 15:51:02 JST 2010 taca@edge.back-street.net:/var/obj/sys/arch/i386/compile/VMWARE-F3-MONO i386
Architecture: i386
Machine: i386
>Description:
	/etc/crontab dosen't processed current cron(8) any more.

>How-To-Repeat:
	There was errors in /var/log/cron.

2010-07-15T09:36:22.896356+09:00 edge.back-street.net cron 1013 - - (*system*) BAD FILE MODE (/etc/crontab)

>Fix:
	It seems that current cron(8) think /etc/crontab as each user's crontab.
	in src/external/bsd/cron/dist/database.c:

	if ((statbuf->st_mode & 07777) != 0600) {
		log_it(fname, getpid(), "BAD FILE MODE", tabname);
		goto next_crontab;
	}

	So, "chmod 600 /etc/crontab" could be workaround.  But there should be
	something to distinct the system crontab and user's crontabs.

>Release-Note:

>Audit-Trail:
From: Christos Zoulas <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43623 CVS commit: src/external/bsd/cron/dist
Date: Thu, 15 Jul 2010 16:04:15 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Jul 15 20:04:14 UTC 2010

 Modified Files:
 	src/external/bsd/cron/dist: database.c

 Log Message:
 PR/43623: Takahiro Kambe: Allow /etc/crontab processing if it is not writable,
 don't insist that it is mode 0600.


 To generate a diff of this commit:
 cvs rdiff -u -r1.2 -r1.3 src/external/bsd/cron/dist/database.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: Takahiro Kambe <taca@back-street.net>
To: gnats-bugs@NetBSD.org
Cc: 
Subject: Re: bin/43623: /etc/crontab dosen't processed any more
Date: Sun, 18 Jul 2010 10:03:06 +0900 (JST)

 Please close this PR since recent changes to cron(8) solved this
 problem.

 Best regards.

 -- 
 Takahiro Kambe <taca@back-street.net>

State-Changed-From-To: open->closed
State-Changed-By: christos@NetBSD.org
State-Changed-When: Sat, 17 Jul 2010 21:06:30 -0400
State-Changed-Why:
submitter verified it is fixed


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.